--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "eslint": ">= 7",
     "@typescript-eslint/eslint-plugin": ">= 4.6.0",
-    "@typescript-eslint/parser": ">= 4.6.0"
+    "@typescript-eslint/parser": ">= 4.6.0",
+    "eslint": ">= 7",
+    "eslint-plugin-react": ">= 7.0.0",
+    "eslint-plugin-react-hooks": ">= 4.0.0"
   }
 }
